# CyBerSim

./: CMakeLists.txt  Doxyfile  Makefile  authors  fichero_undo.txt
aria-guiserver/: aria-guiserver.pro  arnlServer-cybersim.cpp
src/aria-guiserver/: avisaCameraServer.cpp  avisaGripServer.cpp  avisaServerLaser.cpp  avisaServerLaser2.cpp  avisaSimpleServer.cpp  avisaSimpleServerNoLaser.cpp
src/aria-tools/: aractiongroupreactive.cpp  aractiongroupreactive.h  arianetpacketwrapper.cpp  arianetpacketwrapper.h  arserverextinforobot.cpp  arserverextinforobot.h  arservermodereactive.cpp  arservermodereactive.h  blobcamerapacketwrapper.cpp  blobcamerapacketwrapper.h  bumperinfowrapper.cpp  bumperinfowrapper.h  ndrangedeviceinfowrapper.cpp  ndrangedeviceinfowrapper.h  notas  robotinfowrapper.cpp  robotinfowrapper.h  sickinfowrapper.cpp  sickinfowrapper.h  sonarinfowrapper.cpp  sonarinfowrapper.h
src/control/: .directory  abstractfusionnode.cpp  abstractfusionnode.h  abstractmotorplan.cpp  abstractmotorplan.h  accontrolrecorder.cpp  accontrolrecorder.h  areacenter.cpp  areacenter.h  areacenterpolygon.cpp  areacenterpolygon.h  areacenterpolygonsegmented.cpp  areacenterpolygonsegmented.h  areacenterreactivecontrol.cpp  areacenterreactivecontrol.h  areacenterreactivecontrolrightleft.cpp  areacenterreactivecontrolrightleft.h  areacentersegmentedcontrol.cpp  areacentersegmentedcontrol.h  areacenterslamcontrol.cpp  areacenterslamcontrol.h  areacenterslamsegmentcontrol.cpp  areacenterslamsegmentcontrol.h  arialaserfusionnode.cpp  arialaserfusionnode.h  atomicmotorplan.cpp  atomicmotorplan.h  basesimcontrol.cpp  basesimcontrol.h  basesimcontrolfactory.cpp  basesimcontrolfactory.h  blobcamerafusionnode.cpp  blobcamerafusionnode.h  codecontrolfactory.cpp  codecontrolfactory.h  drivecontrol.cpp  drivecontrol.h  drivenomadcontrol.cpp  drivenomadcontrol.h  inputfusionnode.cpp  (+29 more)
src/disview/: .directory  disview.pro  leyend.cpp  leyend.h  neuraldisview.cpp  neuraldisview.h  neuronviewfactory.cpp  neuronviewfactory.h  qcanvas_select_window.cpp  qcanvas_select_window.h  subnetviewfactory.cpp  subnetviewfactory.h  synapseviewfactory.cpp  synapseviewfactory.h
src/imagenes/: .directory  base_fig.fig  base_net.en.fig  base_net.es.fig  filetext.xpm  icons.qrc  neuraldis.xpm  neuraldis32.xpm  rotation.xpm
src/net/: .directory  animatedpixmapitem.cpp  animatedpixmapitem.h  hebbiansynapse.cpp  hebbiansynapse.h  icodevice.cpp  icodevice.h  inputneuron.cpp  inputneuron.h  isodevice.cpp  isodevice.h  isoinputsynapse.cpp  isoinputsynapse.h  learninglink.cpp  learninglink.h  learnsynapse.cpp  learnsynapse.h  motorcommandneuron.cpp  motorcommandneuron.h  net.pro  netbuilder.cpp  netbuilder.h  netfactory.cpp  netfactory.h  neuralconnection.cpp  neuralconnection.h  neuralnetwork.cpp  neuralnetwork.h  neuron.cpp  neuron.h  resonator.cpp  resonator.h  subnet.cpp  subnet.h  subnetsynapse.cpp  subnetsynapse.h  synapse.cpp  synapse.h
src/neuraldis/: .directory  abstractfunction.cpp  abstractfunction.h  classesdict.conf  dictionarymanager.cpp  dictionarymanager.h  exports2fig.cpp  exports2fig.h  helpwindow.cpp  helpwindow.h  helpwindow.ui  main.cpp  matriz.hpp  matriz3d.hpp  mdisubwininterface.cpp  mdisubwininterface.h  measure.hpp  ndmath.cpp  ndmath.h  ndpose.cpp  ndpose.hpp  ndpose2d.hpp  ndpose3dquat.hpp  ndpose3dsph.hpp  neuraldis.pro  neuraldisdoc.cpp  neuraldisdoc.h  qcanvasarc.cpp  qcanvasarc.h  qcanvasarrow.cpp  qcanvasarrow.h  qmake_image_collection.cpp  qrc_dis-icons.cpp  qrc_icons.cpp  qrc_sim-icons.cpp  settings.cpp  settings.h  stroke.cpp  stroke.h  timestamp.hpp  (+6 more)
src/nomad/: nomadclientconnector.cpp  nomadclientconnector.h  nomadcommand.cpp  nomadcommand.h  nomadhelper.cpp  nomadhelper.h  nomadpacket.cpp  nomadpacket.h  nomadrobotconnector.cpp  nomadrobotconnector.h  nomadserverconnector.cpp  nomadserverconnector.h  nomadstatus.cpp  nomadstatus.h  nomadwindow.cpp  nomadwindow.h  nomadwindow.ui
src/recmon/: .directory  boxmonitor.cpp  boxmonitor.h  devicerecorder.cpp  devicerecorder.h  filerecorder.cpp  filerecorder.h  graphicmonitor.cpp  graphicmonitor.h  netrecmontechnician.cpp  netrecmontechnician.h  recmon.pro  recmonconnection.cpp  recmonconnection.h  recmondevice.cpp  recmondevice.h  recmonfactory.cpp  recmonfactory.h
src/robot/: .directory  abstractmotor.cpp  abstractmotor.h  abstractsensor.cpp  abstractsensor.h  ariacamera.cpp  ariacamera.h  ariarangedevice.cpp  ariarangedevice.h  ariasensor.cpp  ariasensor.h  ariasensorgroup.cpp  ariasensorgroup.h  bumplinesensor.cpp  bumplinesensor.h  bumpsensor.cpp  bumpsensor.h  differentialmotor.cpp  differentialmotor.h  fakeblobcamera.cpp  fakeblobcamera.h  genericradialfieldsensor.cpp  genericradialfieldsensor.h  irsensor.cpp  irsensor.h  kheperadrawer.cpp  kheperadrawer.h  kheplightsensor.cpp  kheplightsensor.h  linearsensor.cpp  linearsensor.h  linegroup.cpp  linegroup.h  ndariabumper.cpp  ndariabumper.h  ndariarobot.cpp  ndariarobot.h  ndariarobotfactory.cpp  ndariarobotfactory.h  ndariasick.cpp  (+86 more)
src/sim/: .directory  ariasimulation.cpp  ariasimulation.h  basesimulation.cpp  basesimulation.h  basesimulationfactory.cpp  basesimulationfactory.h  clocksdispatcher.cpp  clocksdispatcher.h  netsimulationfactory.cpp  netsimulationfactory.h  robotsimulation.cpp  robotsimulation.h  robotsimulationfactory.cpp  robotsimulationfactory.h  sim.pro  simulationbuilder.cpp  simulationbuilder.h
src/slam/: .directory  algoritmo.cpp  algoritmo.h  icpalgo.cpp  icpalgo.h  kalmansegment.cpp  kalmansegment.h  kalmanset.cpp  kalmanset.h  pmsalgo.cpp  pmsalgo.h  pmscan.cpp  pmscan.h  psmcartesianalgo.cpp  psmcartesianalgo.h  scalekalmanalgo.cpp  scalekalmanalgo.h  scalespace.cpp  scalespace.h  scanmatchingalgo.cpp  scanmatchingalgo.h
src/translations/: cybersim.es.qm  cybersim.ts  translations.qrc
src/world/: .directory  abstractworld.cpp  abstractworld.h  calculadorbresenham.cpp  calculadorbresenham.h  collisionsolver.cpp  collisionsolver.h  drawings.cpp  drawings.h  ellipsecollisionsolver.cpp  ellipsecollisionsolver.h  lamp.cpp  lamp.h  linecollisionsolver.cpp  rtti.h  (+37 more)
(+216 files in other folders)
