cmake_minimum_required( VERSION 3.5.0)
set ( CMAKE_BUILD_TYPE Debug )

project( cybersim )

#find_package ( Qt6Core REQUIRED )
#find_package ( Qt6Widgets REQUIRED )
#find_package ( Qt6Svg REQUIRED )
#find_package ( Qt6Xml REQUIRED )
#find_package ( Qt6PrintSupport REQUIRED )

find_package ( Qt6 REQUIRED COMPONENTS Core )
find_package ( Qt6 REQUIRED COMPONENTS Widgets )
find_package ( Qt6 REQUIRED COMPONENTS SvgWidgets )
find_package ( Qt6 REQUIRED COMPONENTS Xml )
find_package ( Qt6 REQUIRED COMPONENTS PrintSupport )
find_package( Qt6 REQUIRED COMPONENTS LinguistTools )

include_directories (
    ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}/src/disview/gui # needed for responseframe
    /usr/include/qew6
    /usr/local/Aria/include
    /usr/local/Aria/ArNetworking/include)

set ( cybersim_HDRS
    src/neuraldis/ndmath.h
    src/neuraldis/windowoperations.h
    src/neuraldis/xmloperator.h
    src/neuraldis/xmloperationslog.h
    src/neuraldis/dictionarymanager.h
    src/neuraldis/abstractfunction.h
    src/neuraldis/qcanvasarc.h
    src/neuraldis/qcanvasarrow.h
    src/disview/neuronviewfactory.h
    src/disview/synapseviewfactory.h
    src/disview/subnetviewfactory.h
    src/net/netbuilder.h
    src/net/netfactory.h
    src/recmon/recmonfactory.h
    src/robot/robotposition.h
    src/robot/sensorgroup.h
    src/robot/pointssampledsensorgroup.h
    src/robot/radialfieldsensorgroup.h
    src/robot/sensorfactory.h
    src/robot/sensorsbuilder.h
    src/robot/robotbuilder.h
    src/robot/robotdrawer.h
    src/robot/kheperadrawer.h
    src/sim/basesimulationfactory.h
    src/sim/robotsimulationfactory.h
    src/sim/simulationbuilder.h
    src/world/radialfieldsource.h
    src/world/lamp.h
    src/world/rtti.h
    src/world/miellipse.h
    src/world/mipolygon.h
    src/world/mirectangle.h
    src/world/collisionsolver.h
    src/world/segmentcollisionsolver.h
    src/world/singularpointcollisionsolver.h
    src/world/ellipsecollisionsolver.h
    src/world/polygoncollisionsolver.h
    src/world/rectanglecollisionsolver.h
    src/robot/robotfactory.h
    src/robot/totsimulrobotfactory.h
    src/world/worldfactory.h
    src/world/quadnode.h
    src/world/quadtree.h
    src/world/calculadorbresenham.h
    src/robot/ndariarobotfactory.h
    src/aria-tools/arianetpacketwrapper.h
    src/aria-tools/robotinfowrapper.h
    src/aria-tools/arserverextinforobot.h
    src/robot/ariasensorgroup.h
    src/aria-tools/sonarinfowrapper.h
    src/aria-tools/arservermodereactive.h
    src/aria-tools/aractiongroupreactive.h
    src/aria-tools/bumperinfowrapper.h
    src/aria-tools/ndrangedeviceinfowrapper.h
    src/robot/ariarangedevice.h
    src/aria-tools/sickinfowrapper.h
    src/sim/ariasimulation.h
    src/robot/ndariabumper.h
    src/world/myline.h
    src/robot/sensorpoint.h
    src/robot/linearsensor.h
    src/robot/linegroup.h
    src/robot/sensorline.h
    src/world/linecollisionsolver.h
    src/robot/bumplinesensor.h
    src/robot/rangelinesensor.h
    src/world/material.h
    src/world/drawings.h
    src/control/basesimcontrolfactory.h
    src/control/codecontrolfactory.h
    src/control/isosimcontrol.h
    src/control/netsimcontrol.h
    src/control/netsimcontrolfactory.h
    src/robot/abstractmotor.h
    src/robot/differentialmotor.h
    src/robot/robotcommands.h
    src/robot/sensorsrecorder.h
    src/control/abstractfusionnode.h
    src/control/arialaserfusionnode.h
    src/control/inputfusionnode.h
    src/control/netinputfusionnode.h
    src/control/abstractmotorplan.h
    src/control/outputmotorplan.h
    src/control/motorcommand.h
    src/control/smginterface.h
    src/control/inputfusionnode2d.h
    src/control/robot2dmotorplan.h
    src/control/accontrolrecorder.h
    src/robot/genericradialfieldsensor.h
    src/robot/rangebeamsensor.h
    src/world/solidobject.h
    src/robot/fakeblobcamera.h
    src/control/blobcamerafusionnode.h
    src/aria-tools/blobcamerapacketwrapper.h
    src/robot/ariacamera.h
    src/robot/spritecollisioner.h
    src/control/areacenterslamcontrol.h
    src/slam/icpalgo.h
    src/slam/pmsalgo.h
    src/slam/pmscan.h
    src/slam/psmcartesianalgo.h
    src/slam/scanmatchingalgo.h
    src/net/animatedpixmapitem.h
    src/neuraldis/mdisubwininterface.h
    src/slam/algoritmo.h
    src/slam/kalmansegment.h
    src/slam/kalmanset.h
    src/slam/scalekalmanalgo.h
    src/slam/scalespace.h
    src/control/nullsimcontrol.h
    src/control/areacenterpolygonsegmented.h
    src/control/areacentersegmentedcontrol.h
    src/control/areacenterslamsegmentcontrol.h
    src/control/areacenterreactivecontrolrightleft.h
    src/control/drivenomadcontrol.h
    src/control/motorcontrol.h
    src/control/nullnomadsimcontrol.h
    src/control/smgnomadinterface.h
    src/nomad/nomadclientconnector.h
    src/nomad/nomadcommand.h
    src/nomad/nomadhelper.h
    src/nomad/nomadpacket.h
    src/nomad/nomadrobotconnector.h
    src/nomad/nomadserverconnector.h
    src/nomad/nomadstatus.h
    src/nomad/nomadsimrobotfactory.h
    src/nomad/nomadrobotfactory.h
    src/nomad/nomadsimrobot.h
    src/nomad/nomadsprite.h
    src/nomad/nomadsensorgroup.h
    src/nomad/nomadsensor.h
    src/nomad/nomadbumpsensor.h
    src/nomad/nomadirsensor.h
    src/nomad/nomadsonarsensor.h
    src/nomad/synchronousmotor.h
    src/nomad/turretmotor.h
    src/neuraldis/stroke.h
    )
set ( cybersim_SRCS
    src/neuraldis/main.cpp
    src/neuraldis/helpwindow.cpp
    src/neuraldis/settings.cpp
    src/neuraldis/ndmath.cpp
    src/neuraldis/qcanvasarc.cpp
    src/neuraldis/qcanvasarrow.cpp
    src/neuraldis/windowoperations.cpp
    src/neuraldis/xmloperator.cpp
    src/neuraldis/xmloperationslog.cpp
    src/neuraldis/exports2fig.cpp
    src/neuraldis/dictionarymanager.cpp
    src/neuraldis/abstractfunction.cpp
    src/neuraldis/measure.hpp
    src/neuraldis/ndpose2d.hpp
    src/neuraldis/ndpose3dquat.hpp
    src/neuraldis/ndpose3dsph.hpp
    src/neuraldis/ndpose.hpp
    src/neuraldis/timestamp.hpp
    src/disview/leyend.cpp
    src/disview/neuronviewfactory.cpp
    src/disview/synapseviewfactory.cpp
    src/disview/neuraldisview.cpp
    src/disview/subnetviewfactory.cpp
    src/net/neuron.cpp
    src/net/inputneuron.cpp
    src/net/neuralconnection.cpp
    src/net/synapse.cpp
    src/net/learnsynapse.cpp
    src/net/hebbiansynapse.cpp
    src/net/isoinputsynapse.cpp
    src/net/learninglink.cpp
    src/net/resonator.cpp
    src/net/isodevice.cpp
    src/net/neuralnetwork.cpp
    src/net/netfactory.cpp
    src/net/netbuilder.cpp
    src/net/icodevice.cpp
    src/net/subnetsynapse.cpp
    src/net/motorcommandneuron.cpp
    src/net/subnet.cpp
    src/recmon/recmonconnection.cpp
    src/recmon/recmondevice.cpp
    src/recmon/graphicmonitor.cpp
    src/recmon/boxmonitor.cpp
    src/recmon/devicerecorder.cpp
    src/recmon/recmonfactory.cpp
    src/recmon/netrecmontechnician.cpp
    src/robot/robot.cpp
    src/robot/robotsprite.cpp
    src/robot/robotposition.cpp
    src/robot/abstractsensor.cpp
    src/robot/radialfieldsensor.cpp
    src/robot/kheplightsensor.cpp
    src/robot/pointssampledsensor.cpp
    src/robot/sensorpoint.cpp
    src/robot/bumpsensor.cpp
    src/robot/irsensor.cpp
    src/robot/sensorgroup.cpp
    src/robot/pointssampledsensorgroup.cpp
    src/robot/radialfieldsensorgroup.cpp
    src/robot/sensorsset.cpp
    src/robot/sensorfactory.cpp
    src/robot/robotledmonitor.cpp
    src/robot/sensorsbuilder.cpp
    src/robot/robotmonitorstechnician.cpp
    src/robot/robotrecorder.cpp
    src/robot/robotgraphmonitor.cpp
    src/robot/robotbuilder.cpp
    src/robot/robotdrawer.cpp
    src/robot/kheperadrawer.cpp
    src/sim/clocksdispatcher.cpp
    src/sim/basesimulation.cpp
    src/sim/robotsimulation.cpp
    src/sim/basesimulationfactory.cpp
    src/sim/robotsimulationfactory.cpp
    src/sim/simulationbuilder.cpp
    src/world/radialfieldsource.cpp
    src/world/lamp.cpp
    src/world/world.cpp
    src/world/miellipse.cpp
    src/world/mipolygon.cpp
    src/world/mirectangle.cpp
    src/world/collisionsolver.cpp
    src/world/segmentcollisionsolver.cpp
    src/world/singularpointcollisionsolver.cpp
    src/world/ellipsecollisionsolver.cpp
    src/world/polygoncollisionsolver.cpp
    src/world/rectanglecollisionsolver.cpp
    src/robot/robotfactory.cpp
    src/robot/totallysimulatedrobot.cpp
    src/robot/totsimulrobotfactory.cpp
    src/world/abstractworld.cpp
    src/robot/ndariarobot.cpp
    src/world/ndariaworld.cpp
    src/world/worldview.cpp
    src/world/worldfactory.cpp
    src/world/quadnode.cpp
    src/world/quadtree.cpp
    src/world/calculadorbresenham.cpp
    src/robot/ndariarobotfactory.cpp
    src/aria-tools/arianetpacketwrapper.cpp
    src/aria-tools/robotinfowrapper.cpp
    src/aria-tools/arserverextinforobot.cpp
    src/robot/ariasensor.cpp
    src/robot/ndariasonar.cpp
    src/robot/ariasensorgroup.cpp
    src/aria-tools/sonarinfowrapper.cpp
    src/aria-tools/arservermodereactive.cpp
    src/aria-tools/aractiongroupreactive.cpp
    src/aria-tools/bumperinfowrapper.cpp
    src/aria-tools/ndrangedeviceinfowrapper.cpp
    src/robot/ariarangedevice.cpp
    src/robot/ndariasick.cpp
    src/aria-tools/sickinfowrapper.cpp
    src/sim/ariasimulation.cpp
    src/robot/ndariabumper.cpp
    src/world/myline.cpp
    src/robot/linearsensor.cpp
    src/robot/linegroup.cpp
    src/robot/sensorline.cpp
    src/world/linecollisionsolver.cpp
    src/robot/bumplinesensor.cpp
    src/robot/rangelinesensor.cpp
    src/neuraldis/gui/dictclasschooser.cpp
    src/neuraldis/gui/neuraldisapp.cpp
    src/neuraldis/gui/settingsdialog.cpp
    src/disview/gui/addnetworkdialog.cpp
    src/disview/gui/addneurondialog.cpp
    src/disview/gui/addsynapsedialog.cpp
    src/disview/gui/addsynapsenetdialog.cpp
    src/disview/gui/buildnetdialog.cpp
    src/disview/gui/delnetworkdialog.cpp
    src/disview/gui/delneurondialog.cpp
    src/disview/gui/edithebbiansyntab.cpp
    src/disview/gui/editinputneurontab.cpp
    src/disview/gui/editisodevicetab.cpp
    src/disview/gui/editnetworkdialog.cpp
    src/disview/gui/editneurondialog.cpp
    src/disview/gui/inputisosyntab.cpp
    src/disview/gui/neuronvaluesdialog.cpp
    src/disview/gui/resonatordialog.cpp
    src/disview/gui/selectsynapsedialog.cpp
    src/disview/gui/selectsynapsenetdialog.cpp
    src/disview/gui/synapsevaluesdialog.cpp
    src/disview/gui/textviewer.cpp
    src/disview/gui/responseframe.cpp
    src/recmon/gui/devmondialog.cpp
    src/recmon/gui/graphmondialog.cpp
    src/recmon/gui/recmonedittab.cpp
    src/robot/gui/irsmonitor.cpp
    src/robot/gui/lightmonitor.cpp
    src/robot/gui/ndariarobotkineticstab.cpp
    src/robot/gui/RobotConnectionDialog.cpp
    src/robot/gui/robotkineticstab.cpp
    src/robot/gui/robotmonitorstechtab.cpp
    src/robot/gui/totsimulrobotkineticstab.cpp
    src/sim/gui/basesimulationdialog.cpp
    src/sim/gui/timingresults.cpp
    src/world/material.cpp
    src/neuraldis/neuraldisdoc.cpp
    src/world/drawings.cpp
    src/control/basesimcontrol.cpp
    src/control/basesimcontrolfactory.cpp
    src/control/codecontrolfactory.cpp
    src/control/isosimcontrol.cpp
    src/control/netsimcontrol.cpp
    src/control/netsimcontrolfactory.cpp
    src/control/nullsimcontrol.cpp
    src/control/gui/ISOcontroltab.cpp
    src/control/areacenter.cpp
    src/control/motorcontrol.cpp
    src/robot/abstractmotor.cpp
    src/robot/differentialmotor.cpp
    src/control/drivecontrol.cpp
    src/robot/robotcommands.cpp
    src/robot/gui/robotcommandsdialog.cpp
    src/robot/gui/sensormonitor.cpp
    src/robot/gui/sensormonitorscontainer.cpp
    src/recmon/filerecorder.cpp
    src/robot/sensorsrecorder.cpp
    src/recmon/gui/recordform.cpp
    src/control/abstractfusionnode.cpp
    src/control/arialaserfusionnode.cpp
    src/control/inputfusionnode.cpp
    src/control/netinputfusionnode.cpp
    src/control/inputgenerator.cpp
    src/control/abstractmotorplan.cpp
    src/control/outputmotorplan.cpp
    src/control/motorcommand.cpp
    src/neuraldis/ndpose.cpp
    src/control/smginterface.cpp
    src/control/areacenterreactivecontrol.cpp
    src/control/inputfusionnode2d.cpp
    src/control/robot2dmotorplan.cpp
    src/control/areacenterpolygon.cpp
    src/control/accontrolrecorder.cpp
    src/robot/genericradialfieldsensor.cpp
    src/world/gui/worldscaleform.cpp
    src/control/gui/accontroltab.cpp
    src/robot/rangebeamsensor.cpp
    src/world/solidobject.cpp
    src/world/gui/simfilmdialog.cpp
    src/world/gui/editlinedialog.cpp
    src/robot/fakeblobcamera.cpp
    src/world/gui/defaultmaterialsdialog.cpp
    src/control/blobcamerafusionnode.cpp
    src/aria-tools/blobcamerapacketwrapper.cpp
    src/robot/ariacamera.cpp
    src/robot/spritecollisioner.cpp
    src/control/areacenterslamcontrol.cpp
    src/slam/icpalgo.cpp
    src/slam/pmsalgo.cpp
    src/slam/pmscan.cpp
    src/slam/psmcartesianalgo.cpp
    src/slam/scanmatchingalgo.cpp
    src/net/animatedpixmapitem.cpp
    src/neuraldis/mdisubwininterface.cpp
    src/slam/algoritmo.cpp
    src/slam/kalmansegment.cpp
    src/slam/kalmanset.cpp
    src/slam/scalekalmanalgo.cpp
    src/slam/scalespace.cpp
    src/neuraldis/matriz3d.hpp
    src/neuraldis/matriz.hpp
    src/control/areacenterpolygonsegmented.cpp
    src/control/areacentersegmentedcontrol.cpp
    src/control/areacenterslamsegmentcontrol.cpp
    src/control/areacenterreactivecontrolrightleft.cpp
    src/slam/gui/slampainter.cpp
    src/control/drivenomadcontrol.cpp
    src/control/nullnomadsimcontrol.cpp
    src/control/smgnomadinterface.cpp
    src/nomad/nomadclientconnector.cpp
    src/nomad/nomadcommand.cpp
    src/nomad/nomadhelper.cpp
    src/nomad/nomadpacket.cpp
    src/nomad/nomadrobotconnector.cpp
    src/nomad/nomadserverconnector.cpp
    src/nomad/nomadstatus.cpp
    src/nomad/nomadwindow.cpp
    src/robot/nomadrobotfactory.cpp
    src/robot/nomadsimrobotfactory.cpp
    src/robot/nomadsimrobot.cpp
    src/robot/nomadrobot.cpp
    src/robot/nomadsprite.cpp
    src/robot/nomadsensorgroup.cpp
    src/robot/nomadsensor.cpp
    src/robot/nomadsonarsensor.cpp
    src/robot/nomadirsensor.cpp
    src/robot/nomadbumpsensor.cpp
    src/robot/synchronousmotor.cpp
    src/robot/turretmotor.cpp
    src/robot/gui/nomadconnectiondialog.cpp
    src/neuraldis/stroke.cpp
    )

set ( cybersim_UIS
    src/neuraldis/gui/dictclasschooser.ui
    src/neuraldis/gui/neuraldisapp.ui
    src/neuraldis/gui/settingsdialog.ui
    src/neuraldis/helpwindow.ui
    src/disview/gui/addnetworkdialog.ui
    src/disview/gui/addneurondialog.ui
    src/disview/gui/addsynapsedialog.ui
    src/disview/gui/addsynapsenetdialog.ui
    src/disview/gui/buildnetdialog.ui
    src/disview/gui/delnetworkdialog.ui
    src/disview/gui/delneurondialog.ui
    src/disview/gui/edithebbiansyntab.ui
    src/disview/gui/editinputneurontab.ui
    src/disview/gui/editisodevicetab.ui
    src/disview/gui/editnetworkdialog.ui
    src/disview/gui/editneurondialog.ui
    src/disview/gui/inputisosyntab.ui
    src/disview/gui/neuronvaluesdialog.ui
    src/disview/gui/resonatordialog.ui
    src/disview/gui/selectsynapsedialog.ui
    src/disview/gui/selectsynapsenetdialog.ui
    src/disview/gui/synapsevaluesdialog.ui
    src/disview/gui/textviewer.ui
    src/recmon/gui/devmondialog.ui
    src/recmon/gui/graphmondialog.ui
    src/recmon/gui/recmonedittab.ui
    src/robot/gui/irsmonitor.ui
    src/robot/gui/lightmonitor.ui
    src/robot/gui/RobotConnectionDialog.ui
    src/robot/gui/robotkineticstab.ui
    src/robot/gui/robotmonitorstechtab.ui
    src/robot/gui/totsimulrobotkineticstab.ui
    src/sim/gui/basesimulationdialog.ui
    src/sim/gui/timingresults.ui
    src/control/gui/ISOcontroltab.ui
    src/robot/gui/robotcommandsdialog.ui
    src/robot/gui/sensormonitor.ui
    src/robot/gui/sensormonitorscontainer.ui
    src/recmon/gui/recordform.ui
    src/world/gui/worldscaleform.ui
    src/control/gui/accontroltab.ui
    src/world/gui/simfilmdialog.ui
    src/world/gui/editlinedialog.ui
    src/world/gui/defaultmaterialsdialog.ui
    src/nomad/nomadwindow.ui
    src/robot/gui/NomadConnectionDialog.ui
    )
QT6_WRAP_UI(UIS ${cybersim_UIS})

set ( cybersim_RSCS
    src/imagenes/icons.qrc
    src/disview/imagenes/dis-icons.qrc
    src/sim/imagenes/sim-icons.qrc
    src/translations/translations.qrc
    )
QT6_ADD_RESOURCES(RSCS ${cybersim_RSCS})

set ( cybersim_MOCS
    src/neuraldis/settings.h
    src/neuraldis/exports2fig.h
    src/disview/leyend.h
    src/disview/neuraldisview.h
    src/net/neuron.h
    src/net/inputneuron.h
    src/net/neuralconnection.h
    src/net/synapse.h
    src/net/learnsynapse.h
    src/net/hebbiansynapse.h
    src/net/isoinputsynapse.h
    src/net/learninglink.h
    src/net/resonator.h
    src/net/isodevice.h
    src/net/neuralnetwork.h
    src/net/icodevice.h
    src/net/subnetsynapse.h
    src/net/motorcommandneuron.h
    src/net/subnet.h
    src/recmon/recmonconnection.h
    src/recmon/recmondevice.h
    src/recmon/graphicmonitor.h
    src/recmon/boxmonitor.h
    src/recmon/devicerecorder.h
    src/recmon/netrecmontechnician.h
    src/robot/robot.h
    src/robot/robotposition.h
    src/robot/robotsprite.h
    src/robot/abstractsensor.h
    src/robot/radialfieldsensor.h
    src/robot/kheplightsensor.h
    src/robot/pointssampledsensor.h
    src/robot/bumpsensor.h
    src/robot/irsensor.h
    src/robot/sensorsset.h
    src/robot/robotledmonitor.h
    src/robot/robotmonitorstechnician.h
    src/robot/robotrecorder.h
    src/robot/robotgraphmonitor.h
    src/sim/clocksdispatcher.h
    src/sim/basesimulation.h
    src/sim/robotsimulation.h
    src/world/world.h
    src/robot/totallysimulatedrobot.h
    src/world/ndariaworld.h
    src/world/abstractworld.h
    src/world/worldview.h
    src/world/quadtree.h
    src/neuraldis/helpwindow.h
    src/robot/ndariarobot.h
    src/robot/ariasensor.h
    src/robot/ndariasonar.h
    src/robot/ndariasick.h
    src/neuraldis/gui/dictclasschooser.h
    src/neuraldis/gui/neuraldisapp.h
    src/neuraldis/gui/settingsdialog.h
    src/disview/gui/addnetworkdialog.h
    src/disview/gui/addneurondialog.h
    src/disview/gui/addsynapsedialog.h
    src/disview/gui/addsynapsenetdialog.h
    src/disview/gui/buildnetdialog.h
    src/disview/gui/delnetworkdialog.h
    src/disview/gui/delneurondialog.h
    src/disview/gui/edithebbiansyntab.h
    src/disview/gui/editinputneurontab.h
    src/disview/gui/editisodevicetab.h
    src/disview/gui/editnetworkdialog.h
    src/disview/gui/editneurondialog.h
    src/disview/gui/inputisosyntab.h
    src/disview/gui/neuronvaluesdialog.h
    src/disview/gui/resonatordialog.h
    src/disview/gui/selectsynapsedialog.h
    src/disview/gui/selectsynapsenetdialog.h
    src/disview/gui/synapsevaluesdialog.h
    src/disview/gui/textviewer.h
    src/disview/gui/responseframe.h
    src/recmon/gui/devmondialog.h
    src/recmon/gui/graphmondialog.h
    src/recmon/gui/recmonedittab.h
    src/robot/gui/irsmonitor.h
    src/robot/gui/lightmonitor.h
    src/robot/gui/ndariarobotkineticstab.h
    src/robot/gui/RobotConnectionDialog.h
    src/robot/gui/robotkineticstab.h
    src/robot/gui/robotmonitorstechtab.h
    src/robot/gui/totsimulrobotkineticstab.h
    src/sim/gui/basesimulationdialog.h
    src/sim/gui/timingresults.h
    src/neuraldis/neuraldisdoc.h
    src/control/basesimcontrol.h
    src/control/gui/ISOcontroltab.h
    src/control/areacenter.h
    src/control/drivecontrol.h
    src/robot/gui/robotcommandsdialog.h
    src/robot/gui/sensormonitor.h
    src/robot/gui/sensormonitorscontainer.h
    src/recmon/filerecorder.h
    src/recmon/gui/recordform.h
    src/control/inputgenerator.h
    src/control/areacenterreactivecontrol.h
    src/control/areacenterreactivecontrolrightleft.h
    src/control/areacenterpolygon.h
    src/world/gui/worldscaleform.h
    src/control/gui/accontroltab.h
    src/world/gui/simfilmdialog.h
    src/world/gui/editlinedialog.h
    src/world/gui/defaultmaterialsdialog.h
    src/slam/gui/slampainter.h
    src/nomad/nomadwindow.h
    src/robot/gui/nomadconnectiondialog.h
    src/robot/nomadrobot.h
    )
QT6_WRAP_CPP(MOCS ${cybersim_MOCS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

add_executable(cybersim ${cybersim_SRCS} ${UIS} ${RSCS} ${MOCS})
target_link_libraries ( cybersim   Qt6::Core Qt6::Widgets Qt6::Xml
              Qt6::SvgWidgets Qt6::PrintSupport
    /usr/local/Aria/lib/libAria.so /usr/local/Aria/lib/libArNetworking.so
    /usr/lib/x86_64-linux-gnu/qt6/plugins/designer/libqewextensibledialogs6.so
    /usr/lib/x86_64-linux-gnu/libfftw3.so.3 /usr/lib/x86_64-linux-gnu/libnlopt.so /usr/lib/x86_64-linux-gnu/liblbfgs.so)

